--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -75,7 +75,7 @@ LINK_DIRECTORIES("./abseil/lib")
 
 AUX_SOURCE_DIRECTORY(./ SourceFiles)
 
-ADD_EXECUTABLE(test ${SourceFiles})
+ADD_EXECUTABLE(contain_test ${SourceFiles})
 
 # Declare dependency on the absl::strings library
-TARGET_LINK_LIBRARIES(test gtest_main gtest pthread ${AbslLibs})
+TARGET_LINK_LIBRARIES(contain_test gtest_main gtest pthread ${AbslLibs})
