bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,8 +14,8 @@ pipelines:
         script: # Modify the commands below to build your repository.
           - pipe: atlassian/bitbucket-build-statistics:0.2.0
             variables:
-              BITBUCKET_USERNAME: simintao@126.com
-              BITBUCKET_APP_PASSWORD: Tao1atlassian
+              BITBUCKET_USERNAME: $BITBUCKET_USERNAME
+              BITBUCKET_APP_PASSWORD: $BITBUCKET_APP_PASSWORD
           - mkdir build
           - cd build
           - cmake ..          
