--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,7 @@ pipelines:
         caches:
           - cmake
         script: # Modify the commands below to build your repository.
+          - apt-get install cmake
           - mkdir build
           - cd build
           - cmake ..          
