--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 PROJECT(MyProject)
+
+#INCLUDE_DIRECTORIES("./base/abseil/include")
 ADD_SUBDIRECTORY(base)
+
+#ADD_EXECUTABLE(main main.cc)
+
+
+
