--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -70,6 +70,8 @@ SET (AbslLibs
 
 #message("libs ${AbslLibs}")
 
+set(CMAKE_BUILD_TYPE "Debug")
+
 # add include and lib dirs
 INCLUDE_DIRECTORIES("./abseil/include")
 INCLUDE_DIRECTORIES("./include")
