refacotr cmake file

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -1,19 +1,21 @@
+cmake_minimum_required(VERSION 3.0)
 
 SET (CMAKE_BUILD_TYPE "Debug")
+SET (CMAKE_CXX_STANDARD 17)
 # add include and lib dirs
-INCLUDE_DIRECTORIES("./abseil/include")
-INCLUDE_DIRECTORIES("./include")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/include")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
     MESSAGE(STATUS "Now is windows")
     IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-        LINK_DIRECTORIES("./abseil/lib/win/debug")
+        LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/lib/win/debug")
     ELSE ()
-        LINK_DIRECTORIES("./abseil/lib/win/release")
+        LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/lib/win/release")
     ENDIF ()
 ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     MESSAGE(STATUS "Now is UNIX-like OS's.")
-    LINK_DIRECTORIES("./abseil/lib/unix")
+    LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/lib/unix")
 ENDIF ()
 
 # Abseil lib
@@ -42,20 +44,20 @@ IF (BASE_RUN_TESTS)
     # declare googletest
     IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
-            INCLUDE_DIRECTORIES("../third_party/googletest/win/debug")
-            LINK_DIRECTORIES("../third_party/googletest/win/debug")
+            INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/win/debug")
+            LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/win/debug")
         ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
-            INCLUDE_DIRECTORIES("../third_party/googletest/unix")
-            LINK_DIRECTORIES("../third_party/googletest/unix")
+            INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/unix")
+            LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/unix")
         ENDIF ()
         
     ELSE ()
         IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
-            INCLUDE_DIRECTORIES("../third_party/googletest/win/release")
-            LINK_DIRECTORIES("../third_party/googletest/win/release")
+            INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/win/release")
+            LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/win/release")
         ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
-            INCLUDE_DIRECTORIES("../third_party/googletest/unix")
-            LINK_DIRECTORIES("../third_party/googletest/unix")
+            INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/unix")
+            LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest/unix")
         ENDIF ()
         
     ENDIF()
