--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ ADD_SUBDIRECTORY(base)
 
 # add include and lib dirs
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/base/abseil/include")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/base")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/base/include")
 
 SET (CMAKE_BUILD_TYPE "Debug")
