add memory pool

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -4,6 +4,7 @@ SET (CMAKE_BUILD_TYPE "Debug")
 SET (CMAKE_CXX_STANDARD 17)
 # add include and lib dirs
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/include")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/base")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
