--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     ${CMAKE_CURRENT_SOURCE_DIR}/base/abseil/lib/unix/*.so 
     )
 
-    add_custom_command(TARGET main
+    ADD_CUSTOM_COMMAND(TARGET main
     POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different ${SO_FILES} ${CMAKE_CURRENT_BINARY_DIR}/
     )
