--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -6,8 +6,25 @@ SET (CMAKE_CXX_STANDARD 17)
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/log")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/tcl")
+
+find_package(TCL 8.6 QUIET)
+
+IF(TCL_FOUND)
+
+    INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
+    LINK_DIRECTORIES(${TCL_LIBRARY})    
+
+ELSE(TCL_FOUND)
+
+    MESSAGE(STATUS "not found tcl")
+    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/tcl/include)
+    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/third_party/tcl/lib)
+
+ENDIF(TCL_FOUND)
 
 ADD_SUBDIRECTORY(log)
+ADD_SUBDIRECTORY(tcl)
 
 IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
     MESSAGE(STATUS "Now is windows")
@@ -69,7 +86,7 @@ IF (BASE_RUN_TESTS)
     AUX_SOURCE_DIRECTORY(./test SourceFiles)
     ADD_EXECUTABLE(base_test ${SourceFiles})
 
-    SET(MyLibs base_log)
+    SET(MyLibs base_log base_tcl)
 
     FILE(GLOB SO_FILES 
     ${CMAKE_CURRENT_SOURCE_DIR}/abseil/lib/unix/*.so 
