--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -7,6 +7,7 @@ INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/log")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/tcl")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
 find_package(TCL 8.6 QUIET)
 
