--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -27,6 +27,9 @@ ENDIF(TCL_FOUND)
 ADD_SUBDIRECTORY(log)
 ADD_SUBDIRECTORY(tcl)
 
+LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/glog/)
+LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/gflags/)
+
 IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
     MESSAGE(STATUS "Now is windows")
     IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
