--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,9 +58,14 @@ ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     ${CMAKE_CURRENT_SOURCE_DIR}/base/abseil/lib/unix/*.so 
     )
 
+    FILE(GLOB GLOG_SO_FILES 
+    ${CMAKE_CURRENT_SOURCE_DIR}/base/glog/lib*
+    )
+
     ADD_CUSTOM_COMMAND(TARGET main
     POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different ${SO_FILES} ${CMAKE_CURRENT_BINARY_DIR}/
+    COMMAND ${CMAKE_COMMAND} -E copy ${GLOG_SO_FILES} ${CMAKE_CURRENT_BINARY_DIR}/
     )
 
 ENDIF ()
