--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -7,6 +7,8 @@ INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/abseil/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/log")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/tcl")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/graph")
+
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 
 find_package(TCL 8.6 QUIET)
@@ -26,6 +28,7 @@ ENDIF(TCL_FOUND)
 
 ADD_SUBDIRECTORY(log)
 ADD_SUBDIRECTORY(tcl)
+ADD_SUBDIRECTORY(graph)
 
 LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/gflags/)
 LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/glog/)
@@ -90,7 +93,7 @@ IF (BASE_RUN_TESTS)
     AUX_SOURCE_DIRECTORY(./test SourceFiles)
     ADD_EXECUTABLE(base_test ${SourceFiles})
 
-    SET(MyLibs base_log base_tcl glog gflags unwind)
+    SET(MyLibs base_log base_tcl base_graph glog gflags unwind)
 
     FILE(GLOB SO_FILES 
     ${CMAKE_CURRENT_SOURCE_DIR}/abseil/lib/unix/*.so 
